Migrate backend to nitro
